debug: fix calendar problems when timezone is behind UTC

--- a/src/components/search/SearchCalendar.scss
+++ b/src/components/search/SearchCalendar.scss
@@ -114,7 +114,7 @@
   align-content: flex-start;
   justify-content: center;
   width: 100%;
-  height: 374px;
+  height: 378px;
 
   .loading {
     width: 100%;
